# slingo

./: .env.example  .gitignore  AGENTS.md  LICENSE  app.json  drizzle.config.ts  eslint.config.js  global.css  package-lock.json  package.json  tailwind.config.js  token.txt  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  supabase_client.py
backend/app/routes/: admin_videos.py
backend/app/services/: ai_pipeline.py  ai_pipeline_utils.py  video_ingestion.py
backend/tests/: test_admin_videos.py
db/: schema.ts
patches/: react-native-css-interop+0.2.4.patch
redirect-webserver/: .htaccess  index.html
scripts/: generate-spanish-lessons.mjs
src/app/: +native-intent.tsx  [id].tsx  _layout.tsx  bookmark-search.tsx  index.tsx  lesson-search.tsx
src/components/: BookmarkSearchScreen.tsx  BookmarksScreen.tsx  ClipActions.tsx  ClipInfo.tsx  CommentsSheet.tsx  Feed.tsx  LearningLanguageBadge.tsx  LessonClipCard.tsx  LessonFeedHeader.tsx  LessonFeedScreen.tsx  LessonGestureFeedbackOverlay.tsx  LessonSearchScreen.tsx  LessonVideo.tsx  LessonVideoGestureOverlay.tsx  LessonVideoPreview.tsx  NotificationsScreen.tsx  ProfileAvatar.tsx  PronunciationButton.tsx  SettingsPanel.tsx  SettingsScreen.tsx  ShareClipSheet.tsx  SubtitleLine.tsx  TopicSearchScreen.tsx  VideoScrubber.tsx  WordInsightBookmarkButton.tsx  WordInsightPanel.tsx  social-connections.tsx  splash-screen-controller.tsx
src/data/: generatedSpanishLessons.ts
src/hooks/: use-auth-context.tsx  (+3 more)
(+50 files in other folders)
