[project]
name = "slingo-backend"
version = "0.1.0"
description = "FastAPI backend for Slingo video ingestion and future AI processing."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0,<0.116.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic-settings>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
